fix: returning 404 when account not exists
